[tool.poetry]
name = "click-params"
version = "0.4.1"
description = "A bunch of useful click parameter types"
authors = ["lewoudar <lewoudar@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["click", "params", "validators", "network", "cli"]

homepage = "https://click-params.readthedocs.io/en/stable"
repository = "https://github.com/click-contrib/click_params"
documentation = "https://click-params.readthedocs.io/en/stable"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Terminals",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: PyPy"
]

packages = [
    { include = "click_params" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/click-contrib/click_params/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
click = ">=7.0, <9.0"
validators = "^0.22"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
nox = "^2023.4.22"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
bandit = "^1.6.2"
isort = "^5.10.1"
black = "^23.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.0"

[tool.poetry.group.audit.dependencies]
safety = "^2.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = "--cov=click_params --cov-report html --cov-report xml"

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
